Album list updating (new column added for musics number)

--- a/src/main/resources/views/album/listAlbum.fxml
+++ b/src/main/resources/views/album/listAlbum.fxml
@@ -33,6 +33,7 @@
                             <columns>
                                 <TableColumn fx:id="titreColumn" text="Titre"/>
                                 <TableColumn fx:id="anneeColumn" text="Année"/>
+                                <TableColumn fx:id="nbMusicsColumn"/>
                             </columns>
                         </TableView>
                     </children>
