Playlist list updating (new column added for musics number)

--- a/src/main/resources/views/playlist/listPlaylist.fxml
+++ b/src/main/resources/views/playlist/listPlaylist.fxml
@@ -33,6 +33,7 @@
                             <columns>
                                 <TableColumn fx:id="titreColumn" text="Titre"/>
                                 <TableColumn fx:id="dateActionColumn" text="Date de dernière modification"/>
+                                <TableColumn fx:id="nbMusicsColumn"/>
                             </columns>
                         </TableView>
                     </children>
