--- a/src/main/resources/views/music/addMusic.fxml
+++ b/src/main/resources/views/music/addMusic.fxml
@@ -2,16 +2,23 @@
 
 <!-- MUSIC ADDING FORM VIEW -->
 
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIconView?>
 <?import javafx.geometry.Insets?>
-<BorderPane xmlns:fx="http://javafx.com/fxml/1" styleClass="panel" maxHeight="-Infinity" maxWidth="-Infinity"
-            minHeight="-Infinity"
-            minWidth="-Infinity"
-            stylesheets="/styles/style.css" xmlns="http://javafx.com/javafx/8.0"
-            fx:controller="controllers.music.AddMusicController"
-            fx:id="addMusicBorderPane">
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.BorderPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.VBox?>
+
+<?import javafx.scene.control.ListView?>
+<BorderPane fx:id="addMusicBorderPane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity"
+            minWidth="-Infinity" styleClass="panel" stylesheets="/styles/style.css"
+            xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1"
+            fx:controller="controllers.music.AddMusicController">
     <top>
         <fx:include source="../common/menu.fxml"/>
     </top>
@@ -44,74 +51,88 @@
                                textAlignment="CENTER" GridPane.rowIndex="2"/>
                         <Label alignment="CENTER" contentDisplay="TOP" styleClass="formLabel" text="Nom du fichier : "
                                textAlignment="CENTER" GridPane.rowIndex="3"/>
-                        <Label alignment="CENTER" contentDisplay="TOP" styleClass="formLabel" text="Album : " textAlignment="RIGHT" GridPane.rowIndex="4">
-                            <GridPane.margin>
-                                <Insets bottom="20.0" />
-                            </GridPane.margin>
+                        <Label alignment="CENTER" contentDisplay="TOP" styleClass="formLabel" text="Album : "
+                               textAlignment="RIGHT" GridPane.rowIndex="4">
                         </Label>
                         <Label alignment="CENTER" contentDisplay="TOP" styleClass="formLabel" text="Artiste(s) : "
-                               textAlignment="RIGHT" GridPane.rowIndex="6"/>
+                               textAlignment="RIGHT" GridPane.rowIndex="5"/>
 
-                        <TextField fx:id="titre" maxWidth="350.0" styleClass="formField"
-                                   GridPane.columnIndex="1"/>
-                        <TextField fx:id="duree" maxWidth="110.0" promptText="HH:MM:SS"
-                                   styleClass="formField"
+                        <TextField fx:id="titre" maxWidth="350.0" styleClass="formField" GridPane.columnIndex="1"/>
+                        <TextField fx:id="duree" maxWidth="110.0" promptText="HH:MM:SS" styleClass="formField"
                                    GridPane.columnIndex="1" GridPane.rowIndex="1"/>
-                        <TextField fx:id="dateInsertion" disable="true" maxWidth="120.0"
-                                   styleClass="formField" GridPane.columnIndex="1" GridPane.rowIndex="2"/>
+                        <TextField fx:id="dateInsertion" disable="true" maxWidth="120.0" styleClass="formField"
+                                   GridPane.columnIndex="1" GridPane.rowIndex="2"/>
                         <HBox GridPane.columnIndex="1" GridPane.rowIndex="3">
-                            <TextField fx:id="nomFichier" prefWidth="350.0"
-                                       styleClass="formField"/>
+                            <TextField fx:id="nomFichier" prefWidth="350.0" styleClass="formField"/>
                             <Button mnemonicParsing="false" onAction="#openMusicFileChooser" styleClass="formField"
                                     text="Choisir"/>
                         </HBox>
-                        <ComboBox fx:id="album" prefWidth="350.0" styleClass="formField" GridPane.columnIndex="1" GridPane.rowIndex="4">
+                        <HBox fx:id="albumHBox" GridPane.columnIndex="1" GridPane.rowIndex="4">
                             <GridPane.margin>
-                                <Insets bottom="20.0" />
+                                <Insets top="10.0"/>
                             </GridPane.margin>
-                        </ComboBox>
-                        <HBox maxWidth="900.0" minHeight="300.0" styleClass="formField" GridPane.columnIndex="1" GridPane.rowIndex="6">
-                            <VBox alignment="CENTER">
-                                <Label styleClass="picklistHeading" text="Liste des artistes" />
-                                <ListView fx:id="source" prefWidth="350.0" />
-                            </VBox>
+                            <Button mnemonicParsing="false" onAction="#openNewAlbumAddingModal" styleClass="formField"
+                                    text=" Nouveau">
+                                <graphic>
+                                    <FontAwesomeIconView glyphName="PLUS" size="20.0"/>
+                                </graphic>
+                                <HBox.margin>
+                                    <Insets right="10.0"/>
+                                </HBox.margin>
+                            </Button>
+                            <Button mnemonicParsing="false" onAction="#openExistingAlbumSelectingModal"
+                                    styleClass="formField" text=" Existant">
+                                <graphic>
+                                    <FontAwesomeIconView glyphName="SEARCH" size="20.0"/>
+                                </graphic>
+                            </Button>
+                        </HBox>
 
-                            <VBox alignment="CENTER">
-                                <Button fx:id="addArtist" styleClass="picklistButton">
-                                    <graphic>
-                                        <FontAwesomeIconView glyphName="CARET_RIGHT" size="16.0" />
-                                    </graphic>
-                                </Button>
-                                <Button fx:id="addAllArtist" styleClass="picklistButton">
-                                    <graphic>
-                                        <FontAwesomeIconView glyphName="STEP_FORWARD" />
-                                    </graphic>
-                                </Button>
-                                <Button fx:id="removeArtist" styleClass="picklistButton">
-                                    <graphic>
-                                        <FontAwesomeIconView glyphName="CARET_LEFT" size="16.0" />
-                                    </graphic>
-                                </Button>
-                                <Button fx:id="removeAllArtist" styleClass="picklistButton">
-                                    <graphic>
-                                        <FontAwesomeIconView glyphName="STEP_BACKWARD" />
-                                    </graphic>
-                                </Button>
-                            </VBox>
+                        <HBox GridPane.columnIndex="1" GridPane.rowIndex="6">
+                            <HBox maxWidth="900.0" minHeight="300.0" styleClass="formField" GridPane.columnIndex="1"
+                                  GridPane.rowIndex="6">
+                                <VBox alignment="CENTER">
+                                    <Label styleClass="picklistHeading" text="Liste des artistes"/>
+                                    <ListView fx:id="source" prefWidth="350.0"/>
+                                </VBox>
 
-                            <VBox alignment="CENTER">
-                                <Label styleClass="picklistHeading" text="Artiste(s) de la musique" />
-                                <ListView fx:id="target" prefWidth="350.0" />
-                            </VBox>
+                                <VBox alignment="CENTER">
+                                    <Button fx:id="addArtist" styleClass="picklistButton">
+                                        <graphic>
+                                            <FontAwesomeIconView glyphName="CARET_RIGHT" size="16.0"/>
+                                        </graphic>
+                                    </Button>
+                                    <Button fx:id="addAllArtist" styleClass="picklistButton">
+                                        <graphic>
+                                            <FontAwesomeIconView glyphName="STEP_FORWARD"/>
+                                        </graphic>
+                                    </Button>
+                                    <Button fx:id="removeArtist" styleClass="picklistButton">
+                                        <graphic>
+                                            <FontAwesomeIconView glyphName="CARET_LEFT" size="16.0"/>
+                                        </graphic>
+                                    </Button>
+                                    <Button fx:id="removeAllArtist" styleClass="picklistButton">
+                                        <graphic>
+                                            <FontAwesomeIconView glyphName="STEP_BACKWARD"/>
+                                        </graphic>
+                                    </Button>
+                                </VBox>
+
+                                <VBox alignment="CENTER">
+                                    <Label styleClass="picklistHeading" text="Artiste(s) de la musique"/>
+                                    <ListView fx:id="target" prefWidth="350.0"/>
+                                </VBox>
+                            </HBox>
                         </HBox>
                     </children>
                 </GridPane>
-                <HBox styleClass="formButtonsHBox" alignment="TOP_CENTER" prefHeight="52.0" prefWidth="570.0">
+                <HBox alignment="TOP_CENTER" prefHeight="52.0" prefWidth="570.0" styleClass="formButtonsHBox">
                     <children>
-                        <Button styleClass="yesButton" alignment="TOP_CENTER" contentDisplay="CENTER"
-                                onAction="#validForm" mnemonicParsing="false" prefWidth="80.0" text="Valider"/>
-                        <Button styleClass="noButton" alignment="TOP_CENTER" contentDisplay="CENTER"
-                                onAction="#cancelForm" mnemonicParsing="false" prefWidth="80.0" text="Annuler"/>
+                        <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false"
+                                onAction="#validForm" prefWidth="80.0" styleClass="yesButton" text="Valider"/>
+                        <Button alignment="TOP_CENTER" contentDisplay="CENTER" mnemonicParsing="false"
+                                onAction="#cancelForm" prefWidth="80.0" styleClass="noButton" text="Annuler"/>
                     </children>
                 </HBox>
             </children>
